--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,17 @@ html {
 
 body  {
   background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+  color: #fff;
   font-family: Monaco, Consolas, monospace;
   font-size: 1em;
-  height: 100vh;
-  width:  100vw;
   margin: 0;
   padding: 0;
 }
 
 canvas {
-  display: block;
+  float: left
 }
 
-#weather {
-  position: absolute;
-  top: 0;
-  left: 0;
+#weather-icon {
   margin: 4vw;
 }
