--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body  {
   color: #dda0dd;
   font-family: 'Luckiest Guy', 'Comic Sans MS', 'Arial Black', cursive;
   font-size: 1em;
-  height: 100vh;
   overflow: hidden;
 }
 
@@ -23,10 +22,10 @@ main {
 
 header {
 
-  margin: 40vw auto;
+  margin: 40vh auto;
   width: 90%;
 
-  font-size: 4.2em;
+  font-size: 7vw;
   letter-spacing: 1vw;
   text-align: center;
 }
