--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 html {
   box-sizing: border-box;
   font-size: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -21,34 +22,39 @@ a:link, a:hover, a:visited {
 }
 
 main {
-  position: relative;
-  width: 90%;
-  margin: 1vw auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2fr 1fr;
+  justify-items: center;
+  width: 90vw;
+  height: 100vh;
+  margin: auto;
   visibility: hidden;
 }
 
-#sando {
-  position: absolute;
-  top: 30vh;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 50vh;
+.logo, .tagline {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  align-self: end;
 }
 
-#title {
-  position: absolute;
-  top: 40vh;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  font-size: 9vw;
+#club-logo {
+  width: 50%;
+  display: block;
+  margin: auto;
+}
+
+h1#club-tagline {
+  font-size: 10vw;
   letter-spacing: 1vw;
-  text-align: center;
+  line-height: 0.5em;
 }
 
-#pickle {
-  position: absolute;
-  top: 63vh;
+.mascot {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+#mascot {
   height: 20vh;
 }
